--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,2 +1,29 @@
+<label>Server Name</label>
+<!-- <input type="text" class="from-control" (input)="onUpdateServerName($event)" />
+<input type="text" class="form-control" [(ngModel)]="serverName" />
+<button
+  [disabled]="!allowNewServer"
+  class="btn btn-primary"
+  (click)="onCreateServer()"
+>
+  Add Server
+</button>
+<p>{{ serverCreationStatus }}</p> -->
+<!-- <p>{{ serverName }}</p> -->
 <app-server></app-server>
 <app-server></app-server>
+<label>Username:</label>
+<input
+  type="text"
+  class="form-control"
+  [(ngModel)]="userName"
+  (input)="updateUserName($event)"
+/>
+<p>{{ userName }}</p>
+<button
+  class="btn btn-primary"
+  (click)="onResetUserName()"
+  [disabled]="buttonDisabled"
+>
+  reset user name
+</button>
