--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,12 @@
   <div class="row">
     <div class="col-xs-12">
       <h1>App component</h1>
-      <app-warning-alert></app-warning-alert>
+      <!-- <app-warning-alert></app-warning-alert>
       <app-success-alert></app-success-alert>
-      <app-servers></app-servers>
+      <app-servers></app-servers> -->
       <!-- <div app-servers ></div> -->
       <!-- <div class="app-servers"></div> -->
+      <app-log></app-log>
     </div>
   </div>
 </div>
