--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,15 +1,32 @@
 <label>Server Name</label>
-<!-- <input type="text" class="from-control" (input)="onUpdateServerName($event)" />
 <input type="text" class="form-control" [(ngModel)]="serverName" />
 <button
-  [disabled]="!allowNewServer"
   class="btn btn-primary"
+  [disabled]="!allowNewServer"
   (click)="onCreateServer()"
 >
   Add Server
 </button>
+<p *ngIf="serverCreated; else noServer">
+  Server was created, server name is {{ serverName }}
+</p>
+<ng-template #noServer>
+  <p>No server was created!</p>
+</ng-template>
+<app-server *ngFor="let server of servers"></app-server>
+
+<!-- <input type="text" class="from-control" (input)="onUpdateServerName($event)" />
+<input type="text" class="form-control" [(ngModel)]="serverName" /> -->
+<!-- <button
+  [disabled]="!allowNewServer"
+  class="btn btn-primary"
+  (click)="onCreateServer()"
+>
+ Add Server
+</button>
 <p>{{ serverCreationStatus }}</p> -->
 <!-- <p>{{ serverName }}</p> -->
+<!-- <p>Server was created, server name is {{ userName }}</p>
 <app-server></app-server>
 <app-server></app-server>
 <label>Username:</label>
@@ -21,4 +38,4 @@
   [disabled]="userName === ''"
 >
   reset user name
-</button>
+</button> -->
